# CrossFire

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.circleci/: config.yml
include/: CrossFire.hpp
include/Core/: Application.hpp  State.hpp  StateStack.hpp
include/Graphics/: APIs.hpp  PlatformSurface.hpp
include/Graphics/Surface/: GLFWSurface.hpp
include/Utilities/: Allocator.hpp  Assert.hpp  EventSystem.hpp  IO.hpp  LinkedList.hpp  List.hpp  Logger.hpp  Profiler.hpp  TailQueue.hpp  Time.hpp  Types.hpp
include/Utilities/Filesystem/: Directory.hpp  File.hpp  Filesystem.hpp
include/Utilities/Threading/: SpinLock.hpp  Thread.hpp
src/: main.cpp
src/Core/: Application.cpp  StateStack.cpp
src/Graphics/: PlatformSurface.cpp
src/Graphics/Surface/: GLFWSurface.cpp
src/Utilities/: Allocator.cpp  Assert.cpp  Time.cpp
src/Utilities/Filesystem/: CDirectory.hpp  CFile.cpp  CFile.hpp  Directory.cpp  File.cpp  FileSystem.cpp
